    * 1066 Implemented Dashboard Designer...
    * 1067 FIX: Fixed login problem in LDAP connector when no user filter specified...
    * 1094 FIX: sidebar snaping 'Tree of folders': fixed exception
    * 1154 FIX: Availability: Fixed unwanted redirect to edit annotation page after editing availability options...

    WATO:
    * 1096 New WATO webservices: manage hosts via webinterface...
    * 1064 FIX: Fixed rare issue with WATO communication in distributed setups (different OS versions)...
    * 1089 FIX: Snapshot restore: fixed exception during exception handling......
    * 1091 FIX: logwatch patterns: allow unicode text in pattern comment
    * 1092 FIX: logwatch: now able to enter unicode text into the "Pattern (Regex)" field
    * 0191 FIX: Added swp files to the ignore list for the WATO git feature...
    * 1153 FIX: Changed custom user attributes can now be used immediately...
    * 0201 FIX: Fixed error message in Rulelist of RBN...

    Event Console:
    * 1007 FIX: check_mkevents: fix case where events contain binary zeroes

    HW/SW-Inventory:
    * 0643 windows inventory: OS now contains the install date, reg_uninstall now contains the path...
            NOTE: Please refer to the migration notes!


1.2.5i5:
    Core & Setup:
    * 1012 Fix quoting of backslashes in custom checks with nagios core...
            NOTE: Please refer to the migration notes!
    * 1038 Massive speedup of cmk --snmptranslate
    * 1035 FIX: Do not fail on errors in *.mk files anymore - except in interactive mode...
    * 0174 FIX: Fixed appending of --keepalive-fd parameters to checkhelpers...
    * 1053 FIX: Fixed events check always being reporting OK state...
    * 1045 FIX: Gracefully restart check_mk helpers in case of memory leak...
    * 0633 FIX: diskstat: fixed performance data of old legacy disk IO read/write data...

    Checks & Agents:
    * 0168 f5_bigip_pool: Added Wato configuration...