@@ -55,6 +55,7 @@
 
     WATO:
     * 1096 New WATO webservices: manage hosts via webinterface...
+    * 1155 NagVis map edit/view permissions can now be set using roles...
     * 1064 FIX: Fixed rare issue with WATO communication in distributed setups (different OS versions)...
     * 1089 FIX: Snapshot restore: fixed exception during exception handling......
     * 1091 FIX: logwatch patterns: allow unicode text in pattern comment
